discord-manager/src/index.css
:root{
  --blue: #7289DA;
  --white: #FFFFFF;
  --grey: #99AAB5;
  --classic: #2C2F33;
  --classic_dark: #23272A;
  --classic_ultra_dark: #212325;
  --classic_light: #37393d;
  --green: rgb(96, 211, 96);
  --green_hover: rgb(67, 80, 67);
}

a, a:focus {
  text-decoration: none;
  color: inherit;
}

a:hover{
  color: var(--blue);
}

a:active{
  color: #5a6baa;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--blue);
  border-radius: 10px;
}

body{
  background-color: var(--classic_dark);
  color: var(--white);
  font-family:"Oni Sans", Arial, Times, serif; 
  justify-content: center;
}

.draggable {
  cursor: move;
  cursor: grab;
  cursor: -moz-grab;
  cursor: -webkit-grab;
}

.draggable:active {
  cursor: grabbing;
  cursor: -moz-grabbing;
  cursor: -webkit-grabbing;
}


.title{
  color: var(--blue);
  text-align: center;
  font-size: xx-large;
  width: 90%;
  margin: auto;
  border: 2px var(--blue) solid;
  border-radius: 5px;
  background-color: var(--classic);
  box-shadow: 0 0 5px 1px var(--grey);
}


.hr-header {
  margin: 0px;
}

.guild-name {
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--white);
  padding-left:10px;
  padding-right:10px;
  overflow:hidden;
}
.img-header{
  border-radius: 50%;
  margin: 10px;
  height: 80px;
}

.guild-name > h3{
  display: inline;
  padding: 10px;
}

.btn-options{
  float:right;
  border-radius: 25px;
  margin-top: 5px;
  background-color: transparent;
  cursor: pointer;
  border: 0px;
  font-size: larger;
  color: white;
  
}

.btn-options:hover{
  color: var(--blue);
}

.btn-options>svg{
  transition: transform 0.5s;
}
.btn-options>svg:hover{
  transform: rotate(90deg);
}

.btn-options-close{
  float:left;
  border-radius: 25px;
  margin-top: 10px;
  background-color: transparent;
  cursor: pointer;
  border: 0px;
  font-size: larger;
  color: white;
}

.btn-options-close:hover{
  color: var(--blue);
}

.btn-users{
  float:left!important;
}


.sidebar-under{
  position: fixed;
  z-index: 5;
  top: 0px;
  bottom: 0px;
  right: 0px;
  left: 0px;
  transition: visibility 0.3s, background-color 0.3s;
  background-color: rgba(0, 0, 0, 0);
  visibility: hidden;
}

.sidebar-visible {
  visibility: visible!important;
  background-color: rgba(0, 0, 0, 0.5)!important;
}

.sidebar-content{
  position: absolute;
  right: 0%;
  background-color: var(--classic_light);
  width: 50%;
  max-width: 500px;
  min-width: 200px;
  height: 100%;
  opacity: 1!important;
  border-left: 2px solid var(--blue);
  transition: left 0.3s, right 0.3s;
}

.sidebar-content-shift{
  right:-100%;
}

.sidebar-users-content{
  position: absolute;
  left: 0%;
  background-color: var(--classic_light);
  width: 50%;
  max-width: 500px;
  min-width: 200px;
  height: 100%;
  opacity: 1!important;
  border-right: 2px solid var(--blue);
  transition: left 0.3s, right 0.3s;
}

.sidebar-users-content-shift{
  left:-100%;
}

.sidebar-header {
  color: var(--blue);
  text-align: center;
  font-size: xx-large;
  height: auto;
  margin: auto;
  border: 1px var(--blue) solid;
  border-radius: 2px;
  background-color: var(--classic);
}

.sidebar-options{
  color: var(--white);
  font-size: large;
  height: auto;
  padding: 10px;
  margin: auto;
  border: 1px var(--blue) solid;
  border-radius: 2px;
  background-color: var(--classic);
}

.user-state{
  display: flex;
  align-content: center;
  background-color: var(--classic_dark);
  font-size: larger;
  padding: 5px;
}

.user-state:hover{
  background-color: var(--classic);
}

.img-user-state{
  display: inline-block;
  align-items: center;
  justify-content: center;
  color: black;
  height: 40px;
  width: 40px;
  border-radius: 50%;
}


.img-default-state{
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: larger;
  color: black;
  height: 40px;
  width: 40px;
  border-radius: 50%;
}

.user-state > h4{
  margin:0px;
  display: inline;
  padding: 10px;
}

.state{
  position: relative;
  height: 12px;
  width: 12px;
  right: 12px;
  top: 26px;
  border-radius: 50%;
  box-shadow: 0 0 0 3px var(--classic_dark);
}

.users-state-section{
  width: auto;
  height: 95%;
  white-space: nowrap;
  overflow:scroll;
}

.users-state-header{
  margin:10px;
  font-size: x-large;
  padding:auto;
  text-align: center;
}

.bot-icon{
  display: flex;
  align-items: center;
  background-color: var(--blue);
  color: var(--white);
  border-radius: 5px;
  height: 15px;
  padding:2px;
  font-size: small;
  margin-top:auto;
  margin-bottom:auto;

}

.search-section{
  background-color: var(--classic);
  border: 1px var(--white) solid;
}

.search-bar{
  width: 80%;
  display: flex;
  justify-content: center;
  align-content: center;
  padding: 10px;
  margin:auto;
  margin-top: 10px;
  margin-bottom: 10px;
  background-color: var(--classic_light);
  border-radius: 10px;
  border: 0px;
  color: var(--white);
  font-size: large;
}

.search-bar:focus{
  outline: none !important;
  border:0px;
  border-color: none!important;
}

.corp{
  color: var(--blue);
  width: 90%;
  height: auto;
  margin: auto;
  margin-top: 20px;
  border: 2px var(--blue) solid;
  border-radius: 5px;
  background-color: var(--classic);
  box-shadow: 0 0 5px 1px var(--grey);
  display: grid;
  grid-template-columns: 25% 25% 25% 25%;

}

.flex-container{
  height: auto;
}

.fix-flex{  
  height: auto;
}

.hidden {
  grid-template-columns: 100%!important;
}

.channel{
  margin:5px;
  padding: 0.5em;
  box-shadow: 0 0 2px 1px var(--grey);
}

.channel-title > h4{
  margin:0.3em;
  text-align: center;
  font-size: xx-large;
}

.hide{
  float:right;
  margin-top:-10px;
  border-radius: 25px;
  background-color: transparent;
  cursor: pointer;
  border: 0px;
  font-size: larger;
  color: white;
}

.hide:hover{
  color: var(--blue);
}
/* ... */

